////////////////////////////////////////////////////////////////////////////////
// v1.8 - ??/??/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
  
  upgrades:
    - Support for Microsoft SDK v7.1A, v8.0A, v8.1A.
	
  bugfixes:
    - Fixed graphical issues with Windows 8.
    - PEVerify was not always targeting the proper assembly.
    - Strong name remover was not always targeting the proper assembly.
    - Fixed PE Header when removing strong name.
	  
////////////////////////////////////////////////////////////////////////////////
// v1.7 - 03/01/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Module attributes support.
  
  upgrades:
    - Mono.Cecil update.
    - de4Dot 3.0.3 update.
	
  bugfixes:
    - Using "Replace All With Code" feature was unable to resolve the working
      assembly in some cases, preventing some advanced alterations to the 
      source code.
    - Fixed injection of nested types.
    - Properly handle module characteristics.
	  
////////////////////////////////////////////////////////////////////////////////
// v1.6 - 17/01/2013 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Optional ILMerged version to prevent unexpected Mono.Cecil assemblies.
	  
  upgrades:
    - de4dot 1.9.0 update. New deobfuscation support for CodeFort, CodeWall,
      ILProtector, MPRESS, Rummage.
    - Mono.Cecil 0.9.5 update.
    - ARM, WindowsRuntime and Module characteristics support.
        
  bugfixes:
    - Check customized Mono.Cecil assembly

////////////////////////////////////////////////////////////////////////////////
// v1.5 - 16/04/2012 ///////////////////////////////////////////////////////////