@@ -43,7 +43,7 @@ namespace Reflexil.Editors
 			this.ItemSplitContainer.FixedPanel = System.Windows.Forms.FixedPanel.Panel2;
 			this.ItemSplitContainer.IsSplitterFixed = true;
 			this.ItemSplitContainer.Location = new System.Drawing.Point(0, 0);
-			this.ItemSplitContainer.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+			this.ItemSplitContainer.Margin = new System.Windows.Forms.Padding(4);
 			this.ItemSplitContainer.Name = "ItemSplitContainer";
 			// 
 			// ItemSplitContainer.Panel1
@@ -54,7 +54,7 @@ namespace Reflexil.Editors
 			// 
 			this.ItemSplitContainer.Panel2.Controls.Add(this.BaseCombo);
 			this.ItemSplitContainer.Size = new System.Drawing.Size(161, 26);
-			this.ItemSplitContainer.SplitterDistance = 100;
+			this.ItemSplitContainer.SplitterDistance = 98;
 			this.ItemSplitContainer.SplitterWidth = 5;
 			this.ItemSplitContainer.TabIndex = 0;
 			// 
@@ -62,9 +62,9 @@ namespace Reflexil.Editors
 			// 
 			this.TextBox.Dock = System.Windows.Forms.DockStyle.Fill;
 			this.TextBox.Location = new System.Drawing.Point(0, 0);
-			this.TextBox.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+			this.TextBox.Margin = new System.Windows.Forms.Padding(4);
 			this.TextBox.Name = "TextBox";
-			this.TextBox.Size = new System.Drawing.Size(100, 22);
+			this.TextBox.Size = new System.Drawing.Size(98, 22);
 			this.TextBox.TabIndex = 0;
 			// 
 			// BaseCombo
@@ -73,9 +73,9 @@ namespace Reflexil.Editors
 			this.BaseCombo.DropDownStyle = System.Windows.Forms.ComboBoxStyle.DropDownList;
 			this.BaseCombo.FormattingEnabled = true;
 			this.BaseCombo.Location = new System.Drawing.Point(0, 0);
-			this.BaseCombo.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+			this.BaseCombo.Margin = new System.Windows.Forms.Padding(4);
 			this.BaseCombo.Name = "BaseCombo";
-			this.BaseCombo.Size = new System.Drawing.Size(56, 24);
+			this.BaseCombo.Size = new System.Drawing.Size(58, 24);
 			this.BaseCombo.TabIndex = 1;
 			this.BaseCombo.SelectionChangeCommitted += new System.EventHandler(this.BaseCombo_SelectionChangeCommitted);
 			// 
@@ -84,7 +84,7 @@ namespace Reflexil.Editors
 			this.AutoScaleDimensions = new System.Drawing.SizeF(8F, 16F);
 			this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
 			this.Controls.Add(this.ItemSplitContainer);
-			this.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+			this.Margin = new System.Windows.Forms.Padding(4);
 			this.Name = "TextComboUserControl";
 			this.Size = new System.Drawing.Size(161, 26);
 			this.ItemSplitContainer.Panel1.ResumeLayout(false);
