@@ -3,16 +3,19 @@
 ////////////////////////////////////////////////////////////////////////////////
 
   news:
+    - Added verbatim string operand type in the instruction editor so that you
+      can use special chars like \n, \t...
   
   upgrades:
     - Support for Microsoft SDK v7.1A, v8.0A, v8.1A.
-	
+
   bugfixes:
     - Fixed graphical issues with Windows 8.
     - PEVerify was not always targeting the proper assembly.
     - Strong name remover was not always targeting the proper assembly.
     - Fixed PE Header when removing strong name.
-	  
+    - Fixed support for volatile and unsafe modifiers in "replace all with code"
+
 ////////////////////////////////////////////////////////////////////////////////
 // v1.7 - 03/01/2014 ///////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////
